# oslo-specs

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py  template.rst  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  readme.rst  template.rst
specs/: graduation-template.rst  index.rst  new-library-template.rst  policy-template.rst  template.rst
specs/dalmatian/: enable_by_files_healthcheck_plugin.rst
specs/epoxy/: http-driver.rst  remove-eventlet-from-oslo-service.rst
specs/juno/: add-tpool-proxy-wrapper.rst  amqp10-driver-implementation.rst  app-agnostic-logging-parameters.rst  chaining-regexp-filter.rst  enable-mysql-connector.rst  fix-import-cycle-log-and-versionutils.rst  graduate-oslo-concurrency.rst  graduate-oslo-i18n.rst  graduate-oslo-log.rst  graduate-oslo-middleware.rst  graduate-oslo-serialization.rst  graduate-oslo-utils.rst  index.rst  oslo-config-cfgfilter.rst  oslo-config-generator.rst  oslo-messaging-greenio-executor.rst  pbr-semver.rst  policy-configuration-directories.rst  pylockfile-adoption.rst  pylockfile.rst  remove-context-adapter.rst  rootwrap-daemon-mode.rst  switch-to-mysql-connector.rst  taskflow-conditional-execution.rst  taskflow-improved-scoping.rst  taskflow-redis-jobs.rst  use-events-for-error-wrapping.rst
specs/kilo/: adopt-debtcollector.rst  adopt-oslo-versionedobjects.rst  app-agnostic-logging-parameters.rst  drop-namespace-packages.rst  fix-import-cycle-log-and-versionutils.rst  graduate-oslo-context.rst  (+11 more)
(+76 files in other folders)
