[metadata]
name = oslo-specs
summary = OpenStack Common Libraries (Oslo) Specifications
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://specs.openstack.org/openstack/oslo-specs/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

